# Local-TTS-Model-GE

./: .gitignore  README.md  download_model.py  download_speaker.py  inspect_piper.py  patch_coqui.py  pdf_to_audio.py  pyproject.toml
